--- a/weatherguard/src/CSS/weather.css
+++ b/weatherguard/src/CSS/weather.css
@@ -3,4 +3,29 @@
     border-width: 1px;
     border-radius: 10px;
     font-size: large;
+    text-align: center;
 }
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    gap: 20px;
+    margin: 50px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+  }
+
+  button {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 9px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #45a049;
+  }
