--- a/weatherguard/src/CSS/History.css
+++ b/weatherguard/src/CSS/History.css
@@ -16,6 +16,11 @@ header {
     padding: 1rem 2rem;
     color: #ffffff;
     height: 3rem;
+    border-left: 0.1rem solid #374151;
+}
+
+.main-header {
+    border-bottom: 0.1rem solid #374151;
 }
 
 header {
@@ -23,18 +28,30 @@ header {
     font-size: 1.125rem;
 }
 
+select {
+    background-color: #1e2a3a;
+    color: #b0b8c5;
+    border: none;
+    padding: 0.5rem 0.75rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+select:hover {
+    background-color: #263648;
+}
+
 .weather-history {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     background-color: #1e2a3a;
     background: #1F2937;
     color: white;
     border-radius: 1rem;
     margin: 1rem;
-    padding: 2.5rem;
+    padding: 1.5rem;
     width: 45rem;
-    text-align: center;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
 }
