--- a/weatherguard/src/index.css
+++ b/weatherguard/src/index.css
@@ -14,3 +14,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap");
+
+* {
+  font-family: "Orbitron", sans-serif;
+  font-weight: 700;
+}
