--- a/weatherguard/src/CSS/History.css
+++ b/weatherguard/src/CSS/History.css
@@ -54,4 +54,12 @@ select:hover {
     padding: 1.5rem;
     width: 45rem;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
+    max-height: 30vh;
+}
+
+.history-content {
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    grid-template-rows: auto auto;
+
 }
