--- a/weatherguard/src/CSS/History.css
+++ b/weatherguard/src/CSS/History.css
@@ -52,14 +52,20 @@ select:hover {
     border-radius: 1rem;
     margin: 1rem;
     padding: 1.5rem;
-    width: 45rem;
+    width: 45vw;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
-    max-height: 30vh;
+    max-height: 35vh;
 }
 
 .history-content {
     display: grid;
-    grid-template-columns: 1.5fr 1fr;
-    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr; /* Two columns */
+    grid-template-rows: auto auto; /* Adjust based on content */
+    gap: 10px;
+}
 
+.summary-section {
+    grid-column: 2;
+    grid-row: 1 / span 2;
+    margin-right: 5pt;
 }
